<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/layoutcolor"
    tools:context=".user.PrivacySettingActivity">

    <RelativeLayout
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="5dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/circle"
            android:backgroundTint="?attr/backgroundcolor"
            android:src="@drawable/ic_back"
            tools:ignore="ContentDescription"
            app:tint="#596C84" />

        <TextView
            android:text="@string/privacy_settings"
            android:layout_width="wrap_content"
            android:fontFamily="@font/black"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"/>

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/dpChange"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/profile_photo"
            android:textSize="20sp"
            android:textColor="?attr/textcolor"
            android:fontFamily="@font/bold_roboto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/everyone"
            android:layout_marginTop="2dp"
            android:id="@+id/dp"
            android:textSize="16sp"
            android:textColor="?attr/texttwocolor"
            android:fontFamily="@font/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/onlineChange"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/online_status"
            android:textSize="20sp"
            android:textColor="?attr/textcolor"
            android:fontFamily="@font/bold_roboto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/everyone"
            android:layout_marginTop="2dp"
            android:id="@+id/online"
            android:textSize="16sp"
            android:textColor="?attr/texttwocolor"
            android:fontFamily="@font/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lastChange"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/last_seen"
            android:textSize="20sp"
            android:textColor="?attr/textcolor"
            android:fontFamily="@font/bold_roboto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/everyone"
            android:layout_marginTop="2dp"
            android:id="@+id/last"
            android:textSize="16sp"
            android:textColor="?attr/texttwocolor"
            android:fontFamily="@font/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/aboutChange"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/about"
            android:textSize="20sp"
            android:textColor="?attr/textcolor"
            android:fontFamily="@font/bold_roboto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/everyone"
            android:layout_marginTop="2dp"
            android:id="@+id/about"
            android:textSize="16sp"
            android:textColor="?attr/texttwocolor"
            android:fontFamily="@font/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/whoChange"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/who_can_text_you"
            android:textSize="20sp"
            android:textColor="?attr/textcolor"
            android:fontFamily="@font/bold_roboto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/everyone"
            android:layout_marginTop="2dp"
            android:id="@+id/who"
            android:textSize="16sp"
            android:textColor="?attr/texttwocolor"
            android:fontFamily="@font/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/read_receipts"
            android:textSize="20sp"
            android:textColor="?attr/textcolor"
            android:fontFamily="@font/bold_roboto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Switch
            android:id="@+id/read"
            android:layout_width="wrap_content"
            tools:ignore="UseSwitchCompatOrMaterialXml"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/save"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/btn_round"
        android:backgroundTint="@color/colorPrimary"
        tools:ignore="UnusedAttribute">

        <TextView
            android:textColor="#fff"
            android:textSize="16sp"
            android:text="@string/save"
            android:fontFamily="@font/bold_roboto"
            android:textAllCaps="false"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RelativeOverlap" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:visibility="gone"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:indeterminate="true"
            android:theme="@style/AppTheme.WhiteAccent" />

    </RelativeLayout>

</LinearLayout>