<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="?attr/layoutcolor"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/block"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_cancel"
            android:padding="5dp"
            android:layout_width="32dp"
            android:layout_height="32dp"
            tools:ignore="ContentDescription"
            app:tint="?attr/textcolor" />

        <TextView
            android:text="@string/block"
            android:id="@+id/blockText"
            android:textSize="18sp"
            android:textColor="?attr/textcolor"
            android:fontFamily="@font/bold_roboto"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/chat"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_chat_solid"
            android:padding="5dp"
            android:layout_width="32dp"
            android:layout_height="32dp"
            tools:ignore="ContentDescription"
            app:tint="?attr/textcolor" />

        <TextView
            android:text="@string/chat"
            android:textSize="18sp"
            android:textColor="?attr/textcolor"
            android:fontFamily="@font/bold_roboto"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/report"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_flag"
            android:padding="5dp"
            android:layout_width="32dp"
            android:layout_height="32dp"
            tools:ignore="ContentDescription"
            app:tint="?attr/textcolor" />

        <TextView
            android:text="@string/report"
            android:textSize="18sp"
            android:textColor="?attr/textcolor"
            android:fontFamily="@font/bold_roboto"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>