<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/layoutcolor"
    android:id="@+id/main"
    tools:context=".party.PartyActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/circle"
        android:src="@drawable/ic_back"
        android:tint="#1C2A4D"
        android:backgroundTint="#E4EAF1"
        tools:ignore="ContentDescription,UnusedAttribute,UseAppTint" />

    <TextView
        android:id="@+id/title"
        android:fontFamily="@font/black"
        android:textSize="50sp"
        android:text="Watch\nparty"
        android:textColor="@color/colorPrimary"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:gravity="start"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:fontFamily="@font/bold_roboto"
                android:textColor="?attr/texttwocolor"
                android:textSize="16sp"
                android:text="@string/paste_video_link_from_youtube_or_dailymotion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="45dp">

                <ImageView
                    android:src="@drawable/ic_link"
                    android:layout_width="45dp"
                    android:padding="12dp"
                    android:layout_height="45dp"
                    tools:ignore="ContentDescription"
                    app:tint="?attr/texttwocolor" />

                <EditText
                    android:layout_weight="1"
                    android:hint="@string/link"
                    android:background="@null"
                    android:inputType="textWebEditText|textNoSuggestions"
                    android:maxLines="1"
                    android:layout_marginStart="8dp"
                    android:id="@+id/link"
                    android:layout_width="0dp"
                    android:textColor="?attr/textcolor"
                    android:textColorHint="?attr/texttwocolor"
                    android:fontFamily="@font/bold_roboto"
                    android:layout_height="45dp"
                    tools:ignore="Autofill" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/start"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/btn_round"
            android:backgroundTint="@color/colorPrimary"
            tools:ignore="UnusedAttribute">

            <TextView
                android:textColor="#fff"
                android:textSize="16sp"
                android:text="@string/start"
                android:fontFamily="@font/bold_roboto"
                android:textAllCaps="false"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

        <TextView
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/bold_roboto"
            android:textColor="?attr/texttwocolor"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:id="@+id/upload"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/btn_round"
            android:backgroundTint="@color/colorPrimary"
            tools:ignore="UnusedAttribute">

            <TextView
                android:textColor="#fff"
                android:textSize="16sp"
                android:text="@string/upload_video_amp_start"
                android:fontFamily="@font/bold_roboto"
                android:textAllCaps="false"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:visibility="gone"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:indeterminate="true"
                android:theme="@style/AppTheme.WhiteAccent"
                />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>